[package]
name = "match_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
foldhash = "0.1"
criterion = "0.4"
phf = { version = "0.11", features = ["macros"] }


[build-dependencies]
foldhash = "0.1"
itertools = "0.13"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
plotly = { version = "0.10.0", features = ["kaleido"] }
chrono = "0.4"
sysinfo = "0.32"

[[bench]]
name = "bench"
harness = false