[workspace]
members = ["macro"]

[workspace.package]
version = "0.1.1"
license = "MIT"
edition = "2021"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["match"]
readme = "README.md"
repository = "https://github.com/zao111222333/hashmatch-db/"
documentation = "https://docs.rs/hashmatch"
categories = ["development-tools"]
description = "More efficient static &str match when #arm > 40."

[package]
name = "hashmatch"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true

[workspace.dependencies]
foldhash = "0.1"

[dependencies]
foldhash.workspace = true
hashmatch_macro = "0.1.1"
# hashmatch_macro = { path = "macro"}